uploading progress with almost complete script functionality. Needs to be interfaced with images in html and css affectations.

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <div class="row" id="charSelectRow">
       <div class="col-sm-1 col-sm-offset-1">
         <div class="character">
-          <button id="luke" class="btn btn-info btn-small light-side" value="luke"><p>Luke Skywalker</p></button>
+          <button id="luke" class="btn btn-info btn-small select light-side" value="luke"><p>Luke Skywalker</p></button>
         </div>
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="han" class="btn btn-info btn-small light-side" value="han"><p>Han Solo</p></button>
+          <button id="han" class="btn btn-info btn-small select light-side" value="han"><p>Han Solo</p></button>
         </div>        
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="leia" class="btn btn-info btn-small light-side" value="leia"><p>Leia Organa</p></button>
+          <button id="leia" class="btn btn-info btn-small select light-side" value="leia"><p>Leia Organa</p></button>
         </div>
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="chewy" class="btn btn-info btn-small light-side" value="chewy"><p>Chewbacca</p></button>
+          <button id="chewy" class="btn btn-info btn-small select light-side" value="chewy"><p>Chewbacca</p></button>
         </div>
       </div>
       <div class="col-sm-2">
@@ -37,22 +37,22 @@
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="stormtrooper" class="btn btn-danger btn-small" value="stormtrooper"><p>Stormtrooper</p></button>
+          <button id="stormtrooper" class="btn btn-danger btn-small select dark-side" value="stormtrooper"><p>Stormtrooper</p></button>
         </div>
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="boba" class="btn btn-danger btn-small" value="boba"><p>Boba Fett</p></button>
+          <button id="boba" class="btn btn-danger btn-small select dark-side" value="boba"><p>Boba Fett</p></button>
         </div>
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="vader" class="btn btn-danger btn-small" value="vader"><p>Darth Vader</p></button>
+          <button id="vader" class="btn btn-danger btn-small select dark-side" value="vader"><p>Darth Vader</p></button>
         </div>
       </div>
       <div class="col-sm-1">
         <div class="character">
-          <button id="emperor" class="btn btn-danger btn-small" value="emperor"><p>Emperor Palpatine</p></button>
+          <button id="emperor" class="btn btn-danger btn-small select dark-side" value="emperor"><p>Emperor Palpatine</p></button>
         </div>
       </div>
     </div> <!-- End of Character Select Row -->
@@ -65,6 +65,13 @@
       <div class="col-sm-6">
         <h2><span id="alert">Select a character</span></h2>
       </div>
+    </div>
+    <div class="row" id="combatRow">
+      <div class="col-sm-offset-1 col-sm-1">
+        <button id="attack" class="btn btn-default btn-small">Attack</button>
+        
+      </div>
+      
     </div>
   </div>
 
